@@ -44,6 +44,14 @@ if { ! [ is-loaded hdf5-parallel/1.10.5 ] } {
    module load hdf5-parallel/1.10.5
 }
 
+if { ! [ is-loaded netcdf-c/4.7.3 ] } {
+   module load netcdf-c/4.7.3
+}
+
+if { ! [ is-loaded netcdf-fortran/4.5.2 ] } {
+   module load netcdf-fortran/4.5.2
+}
+
 if { ! [ is-loaded cmake ] } {
    module load cmake
 }
