@@ -3,7 +3,7 @@
 #SBATCH -n 320
 #SBATCH --mem-per-cpu=2000M
 #SBATCH -J regtest_LHD_full
-#SBATCH -t 00:30:00
+#SBATCH -t 00:45:00
 #SBATCH -o C1stdout
 
 touch started
