@@ -1,6 +1,6 @@
        0  0.0000E+00  3.8333E-06  5.0000E-02    0.0000E+00  3.8333E-06  0.0000E+00    4.1049E-01  1.2798E+03  5.3537E-01    1.28070E+03
-       1  2.0000E+01  6.8288E-06  1.4048E-02    2.6163E-06  4.2038E-06  8.6249E-09    4.1018E-01  1.2798E+03  5.3552E-01    1.28070E+03
-       2  4.0000E+01  5.4225E-06 -5.7391E-03    2.0960E-07  5.2088E-06  4.1364E-09    4.1004E-01  1.2798E+03  5.3544E-01    1.28070E+03
-       3  6.0000E+01  6.6941E-06  5.2473E-03    2.2017E-08  6.6706E-06  1.5453E-09    4.0997E-01  1.2798E+03  5.3543E-01    1.28070E+03
-       4  8.0000E+01  8.5310E-06  6.0324E-03    1.4879E-08  8.5140E-06  2.1274E-09    4.0993E-01  1.2798E+03  5.3543E-01    1.28070E+03
-       5  1.0000E+02  1.0685E-05  5.6050E-03    1.5062E-08  1.0667E-05  3.1726E-09    4.0992E-01  1.2798E+03  5.3543E-01    1.28070E+03
+       1  2.0000E+01  6.8302E-06  1.4052E-02    2.6177E-06  4.2039E-06  8.6268E-09    4.1017E-01  1.2798E+03  5.3552E-01    1.28070E+03
+       2  4.0000E+01  5.4228E-06 -5.7429E-03    2.0945E-07  5.2093E-06  4.1356E-09    4.1004E-01  1.2798E+03  5.3544E-01    1.28070E+03
+       3  6.0000E+01  6.6955E-06  5.2510E-03    2.1988E-08  6.6720E-06  1.5442E-09    4.0997E-01  1.2798E+03  5.3543E-01    1.28070E+03
+       4  8.0000E+01  8.5336E-06  6.0348E-03    1.4872E-08  8.5166E-06  2.1278E-09    4.0993E-01  1.2798E+03  5.3543E-01    1.28070E+03
+       5  1.0000E+02  1.0689E-05  5.6070E-03    1.5061E-08  1.0671E-05  3.1740E-09    4.0992E-01  1.2798E+03  5.3543E-01    1.28070E+03
