@@ -35,6 +35,10 @@ if ! [ -x "$(command -v m3dc1_3d)" ]; then
   echo 'Error: m3dc1_3d not found in PATH'
   BADPATH='T'
 fi
+if ! [ -x "$(command -v m3dc1_3d_st)" ]; then
+  echo 'Error: m3dc1_3d_st not found in PATH'
+  BADPATH='T'
+fi
 if ! [ -x "$(command -v part_mesh.sh)" ]; then
   echo 'Error: part_mesh.sh not found in PATH'
   BADPATH='T'
